# pynet

./: .gitignore  README.md  setup.cfg  setup.py
notebooks/: boundary_visualization.ipynb  classification.ipynb  classification_visualization.ipynb  regression.ipynb  regression_visualization.ipynb  testing.ipynb  usage.ipynb
pynet/: tensor.py
pynet/data/: abstract.py  dataset.py  in_memory.py
pynet/functional/: abstract.py  add.py  function.py  matmul.py  max.py  multiply.py  sigmoid.py
pynet/initializers/: abstract.py  he_normal.py
pynet/loss/: abstract.py  bce.py  mse.py
pynet/nn/: abstract.py  initializer.py  linear.py  module.py  relu.py  sequential.py  sigmoid.py
pynet/optimizers/: abstract.py  sgd.py
pynet/training/: history.py  stats.py  trainer.py
pynet/training/callbacks/: abstract.py  lr_schedule.py  print.py
pynet/training/trainer/: abstract.py  default.py
