[metadata]
name = pynet-dl
version = 0.0.4
author = Rastislav Papso
author_email = rastislav.papso@gmail.com
description = Deep learning building blocks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/r-papso/pynet
project_urls =
    Bug Tracker = https://github.com/r-papso/pynet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pynet
packages = find:
install_requires =
    numpy >= 1.21.2
python_requires = >=3.9

[options.packages.find]
where = pynet